# ReCall

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NEUROPACK_INSTRUCTIONS.md  README.md  docker-compose.yml  generate_diagram.py  pyproject.toml  setup_claude.py
.claude/: settings.local.json
.github/: FUNDING.yml
benchmarks/: diagnose.py  locomo.py  locomo_results_st_a.json  locomo_results_st_llm.json  locomo_results_tfidf_a.json
neuropack-extension/: manifest.json
neuropack-extension/background/: service-worker.js
neuropack-extension/content/: content.js
neuropack-extension/options/: options.html  options.js
neuropack-extension/popup/: popup.css  popup.html  popup.js
research/: ai_memory_pain_points.md
src/neuropack/: __init__.py  audit.py  config.py  exceptions.py  types.py  validation.py
src/neuropack/agents/: __init__.py  forgetting_curve.py  librarian.py  pattern_detector.py  predictor.py  reflector.py  temporal_graph.py
src/neuropack/api/: app.py  auth.py  dashboard.html  middleware.py  mobile.html  rate_limit.py  routes.py  schemas.py
src/neuropack/auth/: keys.py
src/neuropack/cli/: agents.py  main.py  onboarding.py  workspace.py
src/neuropack/compression/: engine.py  (+3 more)
tests/: conftest.py  test_agent_memory.py  test_agents.py  test_api.py  test_api_keys.py  test_audit.py  test_cli.py  test_compression.py  test_connectors.py  test_context_generator.py  test_embeddings.py  test_encryption.py  test_format.py  test_graph_retriever.py  test_import_export.py  test_knowledge_graph.py  test_llm_compression.py  test_llm_registry.py  test_longmemeval_improvements.py  test_mcp.py  test_mobile.py  test_namespaces.py  test_new_features.py  test_obsidian.py  test_onboarding.py  test_phase2_features.py  test_privacy.py  test_reflector.py  test_reranker.py  test_search.py  test_sentence_transformer.py  test_session.py  test_storage.py  test_store.py  test_tokens.py  test_training.py  test_validation.py  test_workspace.py
(+87 files in other folders)
