[project]
name = "recall-ai"
version = "0.1.0"
description = "The universal memory layer for AI. Local-first, private, open source."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["memory", "ai", "embeddings", "compression", "rag", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "click>=8.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "zstandard>=0.23.0",
    "mmh3>=4.0",
    "numpy>=1.24.0",
    "cryptography>=42.0",
    "mcp[cli]>=1.20.0",
]

[project.optional-dependencies]
desktop = [
    "pywebview>=5.0",
    "pystray>=0.19.0",
    "Pillow>=10.0",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.5",
]
hnsw = [
    "hnswlib>=0.8.0",
]
transformers = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
]
proxy = [
    "httpx>=0.27.0",
]
watcher = [
    "watchdog>=4.0",
]
benchmark = [
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "coverage>=7.0",
    "ruff>=0.5.0",
]

[project.scripts]
np = "neuropack.cli.main:cli"
rc = "neuropack.cli.main:cli"
neuropack-mcp = "neuropack.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuropack"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
